// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render api-ApiEndpoints correctly 1`] = `
<section
  className="mb-5 list-regular"
  name="Test"
>
  <div
    className="d-flex list-regular--item"
  >
    <div
      className="col-5 pl-0"
    >
      <h3
        className=""
      >
        Operation
      </h3>
    </div>
    <div
      className="col-7"
    >
      <h3
        className=""
      >
        Summary
      </h3>
    </div>
  </div>
  <div
    className="d-flex list-regular--item"
  >
    <div
      className="col-5 pl-0 fdk-text-strong"
    >
      GET
       
      /
    </div>
    <div
      className="col-7"
    />
  </div>
  <div
    className="d-flex list-regular--item"
  >
    <div
      className="col-5 pl-0 fdk-text-strong"
    >
      GET
       
      /enheter
    </div>
    <div
      className="col-7"
    />
  </div>
  <div
    className="d-flex list-regular--item"
  >
    <div
      className="col-5 pl-0 fdk-text-strong"
    >
      GET
       
      /enheter/{organisasjonsnummer}
    </div>
    <div
      className="col-7"
    />
  </div>
  <div
    className="d-flex list-regular--item"
  >
    <div
      className="col-5 pl-0 fdk-text-strong"
    >
      POST
       
      /underenheter
    </div>
    <div
      className="col-7"
    />
  </div>
  <div
    className="d-flex list-regular--item"
  >
    <div
      className="col-5 pl-0 fdk-text-strong"
    >
      GET
       
      /underenheter/{organisasjonsnummer}
    </div>
    <div
      className="col-7"
    />
  </div>
  <div
    className="d-flex list-regular--item"
  >
    <div
      className="col-5 pl-0 fdk-text-strong"
    >
      GET
       
      /oppdateringer/enheter
    </div>
    <div
      className="col-7"
    />
  </div>
  <div
    className="d-flex list-regular--item"
  >
    <div
      className="col-5 pl-0 fdk-text-strong"
    >
      GET
       
      /oppdateringer/underenheter
    </div>
    <div
      className="col-7"
    />
  </div>
  <div
    className="d-flex list-regular--item"
  >
    <div
      className="col-5 pl-0 fdk-text-strong"
    >
      GET
       
      /organisasjonsformer
    </div>
    <div
      className="col-7"
    />
  </div>
  <div
    className="d-flex list-regular--item"
  >
    <div
      className="col-5 pl-0 fdk-text-strong"
    >
      GET
       
      /organisasjonsformer/{orgformKode}
    </div>
    <div
      className="col-7"
    />
  </div>
</section>
`;

exports[`should render api-ApiEndpoints correctly with no props 1`] = `
<section
  className="mb-5 list-regular"
  name={null}
>
  <div
    className="d-flex list-regular--item"
  >
    <div
      className="col-5 pl-0"
    >
      <h3
        className=""
      >
        Operation
      </h3>
    </div>
    <div
      className="col-7"
    >
      <h3
        className=""
      >
        Summary
      </h3>
    </div>
  </div>
</section>
`;
